# sockets

./: .cproject  .gitignore  CMakeLists.txt  LICENSE  makefile
inc/: EchoServ.hpp  FunctionWrapper.hpp  Joiner.hpp  TcpHandler.hpp  ThreadPool.hpp  ThreadQueue.hpp  TsQueue.hpp  WsQueue.hpp  abstractclientclist.hpp  abstractdecoder.hpp  abstractencoder.hpp  abstractiomsg.hpp  clientflow.hpp  clientlist.hpp  io_msg.hpp  iomsg.hpp  serverclient.hpp  session.hpp  tcpclient.hpp  tcpclientlist.hpp  tcpdecoder.hpp  tcpencoder.hpp  tcpiomsg.hpp  tcpserver.hpp  threadpool.hpp
inc/multithreading/: functionwrapper.hpp  tsqueue.hpp  wsqueue.hpp
inc/tcp/: tcpclientlist.hpp  tcpdecoder.hpp  tcpencoder.hpp
src/: EchoServ.cpp  TcpHandler.cpp  ThreadPool.cpp  main.cpp  server.cpp
src/client/: CMakeLists.txt  client.cpp  clientflow.cpp  tcpclient.cpp
src/server/: CMakeLists.txt  server.cpp  tcpclientlist.cpp  threadpool.cpp
src/server/multithreading/: threadpool.cpp
src/tcp/: tcpdecoder.cpp  tcpencoder.cpp
test/: CMakeLists.txt  Main_TestAll.cpp  test.cpp  test1.cpp
